# parsefat

./: .gitignore  CMakeLists.txt  README.md  main.c  output.txt
